[package]
name = "alpyne-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }
rppal = "0.14.1"
rand = "0.8.5"
ctrlc = "3.2.5"
rscam = "0.5.5"
image = "0.24.6"
tensorflow = "0.20.0"
